@@ -4,6 +4,10 @@
 
  Changes between 0.9.4 and 0.9.5  [xx XXX 1999]
 
+  *) Some ASN1 types with illegal zero length encoding (INTEGER,
+     ENUMERATED and OBJECT IDENTIFIER) choked the ASN1 routines.
+     [Frans Heymans <fheymans@isaserver.be>, modified by Steve Henson]
+
   *) Merge in my S/MIME library for OpenSSL. This provides a simple
      S/MIME API on top of the PKCS#7 code, a MIME parser (with enough
      functionality to handle multipart/signed properly) and a utility
